WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192267
[PSON] Request by the client to process-swap is ignored if the window has an opener
https://bugs.webkit.org/show_bug.cgi?id=192267
Summary
[PSON] Request by the client to process-swap is ignored if the window has an ...
Chris Dumez
Reported
2018-11-30 16:53:46 PST
Request by the client to process-swap is ignored if the window has an opener. When the client asks for a swap, we bypass the cross-site check but still do the other opener / openee checks.
Attachments
Patch
(20.52 KB, patch)
2018-11-30 17:01 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews106 for mac-sierra-wk2
(3.09 MB, application/zip)
2018-11-30 18:58 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews122 for ios-simulator-wk2
(9.78 MB, application/zip)
2018-12-01 01:05 PST
,
EWS Watchlist
no flags
Details
Patch
(21.63 KB, patch)
2018-12-01 16:04 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-11-30 16:53:58 PST
<
rdar://problem/46386886
>
Chris Dumez
Comment 2
2018-11-30 17:01:49 PST
Created
attachment 356265
[details]
Patch
EWS Watchlist
Comment 3
2018-11-30 17:03:23 PST
Attachment 356265
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:2606: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:2608: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:2612: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 3 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 4
2018-11-30 18:58:55 PST
Comment on
attachment 356265
[details]
Patch
Attachment 356265
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/10223897
New failing tests: http/tests/navigation/process-swap-window-open.html
EWS Watchlist
Comment 5
2018-11-30 18:58:57 PST
Created
attachment 356282
[details]
Archive of layout-test-results from ews106 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 6
2018-12-01 01:05:13 PST
Comment on
attachment 356265
[details]
Patch
Attachment 356265
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/10227073
New failing tests: http/tests/navigation/process-swap-window-open.html
EWS Watchlist
Comment 7
2018-12-01 01:05:21 PST
Created
attachment 356301
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Chris Dumez
Comment 8
2018-12-01 16:04:17 PST
Created
attachment 356325
[details]
Patch
EWS Watchlist
Comment 9
2018-12-01 16:06:26 PST
Attachment 356325
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:2606: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:2608: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:2612: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 3 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 10
2018-12-03 15:57:46 PST
Comment on
attachment 356325
[details]
Patch Clearing flags on attachment: 356325 Committed
r238826
: <
https://trac.webkit.org/changeset/238826
>
Chris Dumez
Comment 11
2018-12-03 15:57:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug